<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_DAB"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/cero_dp"
        android:layout_marginEnd="@dimen/cero_dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:paddingEnd="@dimen/cincuenta"
        app:navigationIcon="@mipmap/ic_launcher"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:text="@string/dabigatran"
            android:textAlignment="center"
            android:textColor="@color/colorRojoTexto"
            android:textSize="20sp"
            android:theme="?attr/actionBarTheme"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorLightBlue"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/veinte"
            android:paddingBottom="@dimen/veinte">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/mas80annos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/igual_de_80_a_os" />

                <CheckBox
                    android:id="@+id/verapamil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/tratamiento_simult_neo_con_verapamilo" />

                <CheckBox
                    android:id="@+id/creatinina3050"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aclaramiento_de_creatinina_30_50_ml_h"
                    android:textColor="@color/colorPrimary" />

                <CheckBox
                    android:id="@+id/entre7580"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entre_75_y_80_a_os"
                    android:textColor="@color/colorPrimary" />

                <CheckBox
                    android:id="@+id/riesgo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/riesgo_hemorr_gico_alto"
                    android:textColor="@color/colorPrimary" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/veinte"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/resultado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_150mg_cada_12_horas"
                    android:textColor="@color/colorDarkGreen"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/veinte"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/comentarios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrindicado_en_funci_n_renal_inferior_a_30_ml_h"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>