<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_API"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/cero_dp"
        android:layout_marginEnd="@dimen/cero_dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:paddingEnd="@dimen/cincuenta"
        app:navigationIcon="@mipmap/ic_launcher"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:text="@string/apixaban"
            android:textAlignment="center"
            android:textColor="@color/colorRojoTexto"
            android:textSize="20sp"
            android:theme="?attr/actionBarTheme"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorLightBlue"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal|center"
            android:orientation="vertical"
            android:padding="@dimen/veinte">

            <LinearLayout
                android:id="@+id/checkLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ochenta_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ochenta_a"
                    android:textColor="@color/colorPrimary" />

                <CheckBox
                    android:id="@+id/sesentak_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menos60_a"
                    android:textColor="@color/colorPrimary" />

                <CheckBox
                    android:id="@+id/creatinina15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/creatinina15_a"
                    android:textColor="@color/colorPrimary" />

                <CheckBox
                    android:id="@+id/funcion_renal_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/funcion_apixaban" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/veinte"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/resultado_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_5mg_cada_12_horas"
                    android:textColor="@color/colorDarkGreen"
                    android:textSize="@dimen/dieciocho"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/veinte"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/comentarios_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rivaroxaban_comentario"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/catorce"
                    android:textStyle="italic" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>