<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_RIB"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/cero_dp"
        android:layout_marginEnd="@dimen/cero_dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:paddingEnd="@dimen/cincuenta"
        app:navigationIcon="@mipmap/ic_launcher"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:text="@string/rivaroxaban"
            android:textAlignment="center"
            android:textColor="@color/colorRojoTexto"
            android:textSize="20sp"
            android:theme="?attr/actionBarTheme" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorLightBlue"
        android:scrollbars="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/veinte"
            android:paddingBottom="@dimen/veinte">

            <CheckBox
                android:id="@+id/funcion_renal_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/funcion_rivaroxaban" />

            <TextView
                android:id="@+id/resultadoR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cuarenta"
                android:text="@string/_20_rivaroxaban"
                android:textColor="@color/colorDarkGreen"
                android:textSize="@dimen/dieciocho"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/veinte"
                android:text="@string/rivaroxaban_alimento"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dieciocho" />

            <TextView
                android:id="@+id/comentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/veinte"
                android:text="@string/rivaroxaban_comentario"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/catorce"
                android:textStyle="italic" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>