<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/cero_dp"
        android:layout_marginEnd="@dimen/cero_dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:paddingEnd="@dimen/cincuenta"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/ic_launcher"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorRojoTexto"
            android:textSize="20sp"

            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="72dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:background="@color/colorLightBlue"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/contenedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dabigatran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dabigatran"
                android:textSize="@dimen/veintidos"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="10dp"
                android:paddingStart="@dimen/treinta"
                android:paddingEnd="@dimen/treinta"
                android:background="@drawable/boton_dabigatran"/>

            <Button
                android:id="@+id/rivaroxaban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rivaroxaban"
                android:textSize="22sp"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/diez"
                android:paddingStart="@dimen/treinta"
                android:paddingEnd="@dimen/treinta"
                android:background="@drawable/boton_rivaroxaban"/>

            <Button
                android:id="@+id/apixaban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apixaban"
                android:textSize="@dimen/veintidos"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/diez"
                android:paddingStart="@dimen/treinta"
                android:paddingEnd="@dimen/treinta"
                android:background="@drawable/boton_apixaban"/>

            <Button
                android:id="@+id/edoxaban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edoxaban"
                android:textSize="@dimen/veintidos"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/diez"
                android:paddingStart="@dimen/treinta"
                android:paddingEnd="@dimen/treinta"
                android:background="@drawable/boton_edoxaban"/>

        </LinearLayout>

        <TextView
            android:id="@+id/web_esc_guias"
            android:layout_marginTop="@dimen/ochenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_guias_esc"
            android:textStyle="bold|italic"
            android:clickable="true"
            android:textSize="@dimen/doce"
            android:textColorLink="@color/colorPrimaryDark"
            android:focusable="true"

            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>